# react-rust-nx-example

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  nx.json  package-lock.json  package.json
.github/workflows/: ci.yml  main.yml
apps/api/: Cargo.toml  migrate.sh  project.json
apps/api/api-docs/: openapi.yaml
apps/api/migrations/: 20241112150209_init.down.sql  20241112150209_init.up.sql
apps/api/tests/: integration_test.rs
apps/app/: jest.config.ts  vite.config.ts
apps/app-e2e/: playwright.config.ts
apps/app/src/app/: nx-welcome.tsx
